[project]
name = "multplat-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "django>=5.2.7",
  "django-cors-headers>=4.9.0",
  "graphene-django>=3.2.3",
  "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
  "flake8[bugbear]>=7.3.0",
  "ipdb>=0.13.13",
  "mypy>=1.19.0",
  "pytest>=8.4.2",
  "pytest-django>=4.11.1",
  "ruff>=0.14.3",
]

[tool.pytest.ini_options]
pythonpath = "./src"
DJANGO_SETTINGS_MODULE = "src.config.settings"

[tool.ruff]
docstring-code-format = true

[tool.mypy]
mypy_path = "src/apps/core/domain"

strict = true
python_version = "3.13"
show_error_codes = true
